@@ -1,0 +1,9 @@
+PROJECT (Examples)
+
+# replace "..." with the path to your YARP binaries if needed
+SET(YARP_DIR "${CMAKE_SOURCE_DIR}/../.." CACHE LOCATION "where is yarp?")
+
+FIND_PACKAGE(YARP)
+  ADD_EXECUTABLE(motorcontrol main.cpp)
+ENDIF(GSL_FOUND)
+
